# orbtronics-l1-software-engineer

./: .envrc  .gitignore  Makefile  README.md  compose.prod.yaml  compose.yaml  example.env  flake.nix  treefmt.toml
.github/workflows/: build-infrastructure-and-deploy.yaml  publish-docker-images-ghcr.yaml  static-analysis.yaml
backend/: .env.example  .gitignore  Dockerfile  Makefile  api.yaml  example.env  pyproject.toml
backend/src/orbtronics_l1_software_engineer_backend/: main.py
backend/src/orbtronics_l1_software_engineer_backend/helpers/: api.py  crypt.py  database.py  environment.py  tests.py
backend/src/orbtronics_l1_software_engineer_backend/models/: tasks.py  users.py
backend/src/orbtronics_l1_software_engineer_backend/routes/: auth.py  health.py  tasks.py  users.py
backend/src/orbtronics_l1_software_engineer_backend/schemas/: auth.py  tasks.py
backend/src/orbtronics_l1_software_engineer_backend/tests/: test_api.py  test_crypt.py  test_database.py  test_environment.py
frontend/: Dockerfile  package.json
frontend/scripts/: update-app-gfx.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/signup/: route.ts
frontend/src/app/api/auth/status/: route.ts
frontend/src/components/: components.tsx
frontend/src/components/modal/: auth.tsx
frontend/src/components/navbar/: navbar.tsx
frontend/src/components/swap/: theme-controller.tsx
frontend/src/components/viewport/: app.tsx
frontend/src/context/: auth-context.tsx  user-context.tsx
frontend/src/lib/: auth.ts  lib.tsx
infrastructure/: .gitignore  .terraform.lock.hcl  env-vars.tf  instance.tf  main.tf  networking.tf  terraform.tfvars.example
infrastructure/remote-state/: main.tf
infrastructure/scripts/: extract-pem-key.sh  init.sh  ssh.sh
