[project]
name = "orbtronics-l1-software-engineer-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nooneknows",email = "157999171+nooneknowspeter@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "orbtronics_l1_software_engineer_backend", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"