[project]
name = "orbtronics-l1-software-engineer-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nooneknows",email = "157999171+nooneknowspeter@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bson (>=0.5.10,<0.6.0)",
    "pymongo (>=4.14.1,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "orbtronics_l1_software_engineer_backend", from = "src"}]
package-mode = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"